2004-12-18 13:24 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormLib/IBApplicationAdditions.h
	* GormLib/IBConnectors.h
	* GormLib/IBDocuments.h
	* GormLib/IBEditors.h
	* GormLib/IBPalette.h
	* GormLib/IBSystem.h: Changed IB_EXPORT to IB_EXTERN.

2004-12-18 10:05 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m:
	* GormFilesOwner.m:
	* Gorm.m:
	* GormPalettesManager.m:
	* GormWindowEditor.m: Changed NSRunAlertPanel(...) calls
	to use nil instead of NULL.  NULL shouldn't be used.

2004-12-18 08:53 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormLib/GNUmakefile: Added new header
	* GormLib/GNUmakefile.preamble: Added comment.
	* GormLib/IBApplicationAdditions.h: Add include, change extern to 
	IB_EXPORT
	* GormLib/IBConnectors.h: Same
	* GormLib/IBDocuments.h: Same
	* GormLib/IBEditors.h: Same
	* GormLib/IBPalette.h: Same
	* GormLib/IBSystem.h: New file containing declarations for
	IB_EXPORT for different Operating Systems.
	* GormLib/InterfaceBuilder.h: Include IBSystem.h.

2004-12-17 21:28 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassInspector.m: Set the double action and target
	for parentClass.
	* GormObjectEditor.m: Moved the pasteInSelection method.

2004-12-17 05:48 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Changed implementation here to call the one
	on the object editor.
	* GormObjectEditor.m: Added implementation for 
	removeAllInstancesOfClass:
	* GormPrivate.h: Added declaration for removeAllInstancesOfClass:

2004-12-16 05:32 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassEditor.m: added call to removeAllInstancesOfClass: in 
	deleteSelection so that no objects in the objectView can refer to
	a class that doesn't have a correstponding class in the 
	class manager/class editor.
	* GormClassManager.h: Added declaration for classNameForObject:.
	* GormClassManager.m: Added implemented for classNameForObject:.